--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-image: linear-gradient(to right, var(--color-grey-dark-1), var(--color-grey-dark-2));
+  background-image: linear-gradient(to right, #000, #111);
   min-height: 100vh;
   color: var(--color-grey-light-3);
   display: flex;
@@ -57,14 +57,16 @@ body {
       width: 100%; } }
 
 .header {
-  font-size: 4rem;
-  width: 100%;
+  font-size: 3rem;
+  width: 95vw;
   text-align: center;
   padding: 3rem 5rem;
   border-bottom: var(--line);
+  margin: 2rem;
   background-image: url("../images/bg.jpg");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  border-radius: 3rem; }
   @media only screen and (max-width: 31.25em) {
     .header {
       height: 10rem;
@@ -134,14 +136,41 @@ body {
     justify-content: center;
     align-items: center;
     padding: 3rem 5rem; }
-    .input__collection input {
-      padding: 0.5rem 1rem; }
+  .input__select {
+    padding: 0.5rem 2rem;
+    width: 100%;
+    border-radius: 0.5rem; }
   .input__set {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 0 3rem; }
+    padding: 1rem 3rem; }
+  .input__error {
+    color: #ddd;
+    transform: translateX(0);
+    transition: 0.7s all ease-in; }
+    .input__error.hidden {
+      opacity: 0;
+      transform: translateX(-100%); }
+
+table {
+  width: 90vw; }
+  table th {
+    font-size: 2.5rem;
+    margin-bottom: 1rem; }
+
+.data__col--1 {
+  width: 15%; }
+
+.data__col--2 {
+  width: 35%; }
+
+.data__col--3 {
+  width: 30%; }
+
+.data__col--4 {
+  width: 20%; }
 
 .logo {
   height: 3.25rem;
@@ -208,6 +237,8 @@ body {
   position: relative;
   overflow: hidden;
   color: #fff; }
+  .btn--1 {
+    margin-right: 5rem; }
   .btn > * {
     display: inline-block;
     height: 100%;
