--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -47,11 +47,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-image: linear-gradient(
-    to right,
-    var(--color-grey-dark-1),
-    var(--color-grey-dark-2)
-  );
+  background-image: linear-gradient(to right, #000, #111);
   // rgba(var(--color-grey-dark-1), 1),
   // rgba(var(--color-grey-dark-2), 1)
 
