--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -12,10 +12,12 @@
     justify-content: center;
     align-items: center;
     padding: 3rem 5rem;
+  }
 
-    & input {
-      padding: 0.5rem 1rem;
-    }
+  &__select {
+    padding: 0.5rem 2rem;
+    width: 100%;
+    border-radius: 0.5rem;
   }
 
   &__set {
@@ -23,7 +25,43 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 0 3rem;
+    padding: 1rem 3rem;
+  }
+
+  &__error {
+    color: #ddd;
+    transform: translateX(0);
+    transition: 0.7s all ease-in;
+
+    &.hidden {
+      opacity: 0;
+      transform: translateX(-100%);
+    }
+  }
+}
+
+//table
+table {
+  width: 90vw;
+
+  th {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.data__col {
+  &--1 {
+    width: 15%;
+  }
+  &--2 {
+    width: 35%;
+  }
+  &--3 {
+    width: 30%;
+  }
+  &--4 {
+    width: 20%;
   }
 }
 
@@ -121,6 +159,9 @@
   overflow: hidden;
   color: #fff;
 
+  &--1 {
+    margin-right: 5rem;
+  }
   & > * {
     display: inline-block;
     height: 100%;
