--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -16,16 +16,17 @@
 }
 
 .header {
-  font-size: 4rem;
-  width: 100%;
+  font-size: 3rem;
+  width: 95vw;
   text-align: center;
   // height: 10rem;
   padding: 3rem 5rem;
   border-bottom: var(--line);
-
+  margin: 2rem;
   background-image: url('../images/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  border-radius: 3rem;
 
   @media only screen and (max-width: $bp-smallest) {
     height: 10rem;
