--- a/css/style.css
+++ b/css/style.css
@@ -172,18 +172,8 @@ table {
 .data__col--4 {
   width: 20%; }
 
-.logo {
-  height: 3.25rem;
-  margin-left: 2rem; }
-
-.legal {
-  font-size: 1.2rem;
-  color: var(--color-grey-light-4);
-  text-align: center;
-  padding: 2.5rem; }
-  @media only screen and (max-width: 56.25em) {
-    .legal {
-      display: none; } }
+.arrow {
+  cursor: pointer; }
 
 .data__container {
   font-size: 2rem; }
@@ -191,27 +181,6 @@ table {
 .data__col {
   text-align: center;
   padding: 0.5rem 2rem; }
-
-.btn-inline {
-  border: none;
-  color: var(--color-primary);
-  font-size: inherit;
-  border-bottom: var(--line);
-  padding: 3px;
-  display: inline-block;
-  background-color: transparent;
-  cursor: pointer;
-  transition: all 0.2s; }
-  .btn-inline span {
-    margin-left: 3px;
-    transition: all 0.2s; }
-  .btn-inline:hover {
-    color: var(--color-grey-dark-1); }
-    .btn-inline:hover span {
-      margin-left: 8px; }
-  .btn-inline:focus {
-    outline: none;
-    animation: pulsate 1s infinite; }
 
 @keyframes pulsate {
   0%,
@@ -221,9 +190,6 @@ table {
   50% {
     transform: scale(1.05);
     box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); } }
-
-.paragraph:not(:last-child) {
-  margin-bottom: 2rem; }
 
 .btn {
   cursor: pointer;
@@ -257,4 +223,48 @@ table {
     transform: translateY(200%); }
   .btn:focus {
     outline: none;
-    animation: pulsate 1s infinite; }
+    animation: pulsate 1s; }
+
+.loader {
+  animation: spin 1s infinite linear;
+  border: solid 2vmin transparent;
+  border-radius: 50%;
+  border-right-color: #09f;
+  border-top-color: #09f;
+  box-sizing: border-box;
+  height: 20vmin;
+  left: calc(50% - 10vmin);
+  position: fixed;
+  top: calc(50% - 10vmin);
+  width: 20vmin;
+  z-index: 1; }
+  .loader:before {
+    animation: spin 2s infinite linear;
+    border: solid 2vmin transparent;
+    border-radius: 50%;
+    border-right-color: #3cf;
+    border-top-color: #3cf;
+    box-sizing: border-box;
+    content: '';
+    height: 16vmin;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 16vmin; }
+  .loader:after {
+    animation: spin 3s infinite linear;
+    border: solid 2vmin transparent;
+    border-radius: 50%;
+    border-right-color: #6ff;
+    border-top-color: #6ff;
+    box-sizing: border-box;
+    content: '';
+    height: 12vmin;
+    left: 2vmin;
+    position: absolute;
+    top: 2vmin;
+    width: 12vmin; }
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg); } }
