--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -40,6 +40,10 @@
   }
 }
 
+.hidden {
+  opacity: 0;
+}
+
 //table
 table {
   width: 90vw;
@@ -155,8 +159,8 @@ table {
   animation: spin 1s infinite linear;
   border: solid 2vmin transparent;
   border-radius: 50%;
-  border-right-color: #09f;
-  border-top-color: #09f;
+  border-right-color: var(--color-grey-light-1);
+  border-top-color: var(--color-grey-light-1);
   box-sizing: border-box;
   height: 20vmin;
   left: calc(50% - 10vmin);
@@ -168,8 +172,8 @@ table {
     animation: spin 2s infinite linear;
     border: solid 2vmin transparent;
     border-radius: 50%;
-    border-right-color: #3cf;
-    border-top-color: #3cf;
+    border-right-color: var(--color-grey-dark-2);
+    border-top-color: var(--color-grey-dark-2);
     box-sizing: border-box;
     content: '';
     height: 16vmin;
@@ -182,8 +186,8 @@ table {
     animation: spin 3s infinite linear;
     border: solid 2vmin transparent;
     border-radius: 50%;
-    border-right-color: #6ff;
-    border-top-color: #6ff;
+    border-right-color: var(--color-grey-light-1);
+    border-top-color: var(--color-grey-light-1);
     box-sizing: border-box;
     content: '';
     height: 12vmin;
