--- a/css/style.css
+++ b/css/style.css
@@ -1,278 +1,1 @@
-:root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #ff3366;
-  --color-primary-dark: #ba265d;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.1);
-  --line: 1px solid var(--color-grey-light-2); }
-
-* {
-  margin: 0;
-  padding: 0; }
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit; }
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; }
-  @media only screen and (max-width: 68.75em) {
-    html {
-      font-size: 50%; } }
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  background-image: linear-gradient(to right, #000, #111);
-  min-height: 100vh;
-  color: var(--color-grey-light-3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start; }
-
-.container {
-  max-width: 120rem;
-  margin: 4rem auto;
-  background-color: var(--color-grey-light-1);
-  box-shadow: var(--shadow-dark);
-  min-height: 50rem;
-  height: 100%;
-  display: flex;
-  flex-direction: column; }
-  @media only screen and (max-width: 75em) {
-    .container {
-      margin: 0;
-      max-width: 100%;
-      width: 100%; } }
-
-.header {
-  font-size: 3rem;
-  width: 95vw;
-  text-align: center;
-  height: auto;
-  padding: 3rem 5rem;
-  border-bottom: var(--line);
-  margin: 2rem;
-  background-image: url("../images/bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 3rem;
-  transition: 2s all; }
-  @media only screen and (max-width: 31.25em) {
-    .header {
-      height: 10rem;
-      align-content: space-around; } }
-
-.content {
-  display: flex;
-  align-items: stretch;
-  flex: 1; }
-  @media only screen and (max-width: 56.25em) {
-    .content {
-      flex-direction: column; } }
-
-.sidebar {
-  background-color: var(--color-grey-dark-1);
-  flex: 0 0 16%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; }
-
-.detail {
-  display: flex;
-  font-size: 1.4rem;
-  padding: 5rem;
-  background-color: var(--color-grey-light-3);
-  border-bottom: var(--line); }
-  @media only screen and (max-width: 56.25em) {
-    .detail {
-      padding: 2rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .detail {
-      padding: 1rem;
-      flex-direction: column; } }
-
-.description {
-  font-size: 1.4rem;
-  background-color: #fff;
-  box-shadow: var(--shadow-light);
-  padding: 3rem;
-  flex: 0 0 60%;
-  margin-right: 5rem; }
-  @media only screen and (max-width: 56.25em) {
-    .description {
-      padding: 1rem;
-      margin-right: 2rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .description {
-      padding: 1rem;
-      margin-right: 0;
-      margin-bottom: 3rem; } }
-
-.user-reviews {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-
-.input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-size: 2rem;
-  width: 100%; }
-  .input__collection {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 3rem 5rem; }
-  .input__select {
-    padding: 0.5rem 2rem;
-    width: 100%;
-    border-radius: 0.5rem; }
-  .input__set {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 1rem 3rem; }
-  .input__error {
-    color: #ddd;
-    transform: translateX(0);
-    transition: 0.7s all ease-in; }
-    .input__error.hidden {
-      opacity: 0;
-      transform: translateX(-100%); }
-
-.hidden {
-  opacity: 0; }
-
-table {
-  width: 90vw; }
-  table th {
-    font-size: 2.5rem;
-    margin-bottom: 1rem; }
-
-.data__col--1 {
-  width: 15%; }
-
-.data__col--2 {
-  width: 35%; }
-
-.data__col--3 {
-  width: 30%; }
-
-.data__col--4 {
-  width: 20%; }
-
-.arrow {
-  cursor: pointer; }
-
-.large {
-  font-size: 4rem; }
-
-.data__container {
-  font-size: 2rem; }
-
-.data__col {
-  text-align: center;
-  padding: 0.5rem 2rem; }
-
-@keyframes pulsate {
-  0%,
-  100% {
-    transform: scale(1);
-    box-shadow: 0; }
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); } }
-
-.btn {
-  cursor: pointer;
-  font-size: 1.5rem;
-  border: none;
-  font-weight: 300;
-  text-transform: uppercase;
-  border-radius: 1000px;
-  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary));
-  padding: 1.5rem 5rem;
-  position: relative;
-  overflow: hidden;
-  color: #fff; }
-  .btn--1 {
-    margin-right: 5rem; }
-  .btn > * {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    transition: all 0.35s; }
-  .btn__invisible {
-    position: absolute;
-    top: -100%;
-    left: 0;
-    padding: 2rem 0rem; }
-  .btn:hover {
-    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary)); }
-  .btn:hover .btn__invisible {
-    top: 0; }
-  .btn:hover .btn__visible {
-    transform: translateY(200%); }
-  .btn:focus {
-    outline: none;
-    animation: pulsate 1s; }
-
-.loader {
-  animation: spin 1s infinite linear;
-  border: solid 2vmin transparent;
-  border-radius: 50%;
-  border-right-color: var(--color-grey-light-1);
-  border-top-color: var(--color-grey-light-1);
-  box-sizing: border-box;
-  height: 20vmin;
-  left: calc(50% - 10vmin);
-  position: fixed;
-  top: calc(50% - 10vmin);
-  width: 20vmin;
-  z-index: 1; }
-  .loader:before {
-    animation: spin 2s infinite linear;
-    border: solid 2vmin transparent;
-    border-radius: 50%;
-    border-right-color: var(--color-grey-dark-2);
-    border-top-color: var(--color-grey-dark-2);
-    box-sizing: border-box;
-    content: '';
-    height: 16vmin;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 16vmin; }
-  .loader:after {
-    animation: spin 3s infinite linear;
-    border: solid 2vmin transparent;
-    border-radius: 50%;
-    border-right-color: var(--color-grey-light-1);
-    border-top-color: var(--color-grey-light-1);
-    box-sizing: border-box;
-    content: '';
-    height: 12vmin;
-    left: 2vmin;
-    position: absolute;
-    top: 2vmin;
-    width: 12vmin; }
-
-@keyframes spin {
-  100% {
-    transform: rotate(360deg); } }
+:root{--color-primary: #eb2f64;--color-primary-light: #ff3366;--color-primary-dark: #ba265d;--color-grey-light-1: #faf9f9;--color-grey-light-2: #f4f2f2;--color-grey-light-3: #f0eeee;--color-grey-light-4: #ccc;--color-grey-dark-1: #333;--color-grey-dark-2: #777;--color-grey-dark-3: #999;--shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);--shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.1);--line: 1px solid var(--color-grey-light-2)}*{margin:0;padding:0}*,*::after,*::before{-webkit-box-sizing:inherit;box-sizing:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box;font-size:62.5%}@media only screen and (max-width: 68.75em){html{font-size:50%}}body{font-family:'Open Sans', sans-serif;font-weight:400;line-height:1.6;background-image:-webkit-gradient(linear, left top, right top, from(#000), to(#111));background-image:linear-gradient(to right, #000, #111);min-height:100vh;color:var(--color-grey-light-3);display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start}.container{max-width:120rem;margin:4rem auto;background-color:var(--color-grey-light-1);-webkit-box-shadow:var(--shadow-dark);box-shadow:var(--shadow-dark);min-height:50rem;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}@media only screen and (max-width: 75em){.container{margin:0;max-width:100%;width:100%}}.header{font-size:3rem;width:95vw;text-align:center;height:auto;padding:3rem 5rem;border-bottom:2px var(--color-primary) solid;border-right:2px var(--color-primary) solid;margin:2rem;background-image:url("../images/bg.jpg");background-size:cover;background-repeat:no-repeat;border-radius:3rem;-webkit-transition:2s all;transition:2s all}@media only screen and (max-width: 31.25em){.header{height:10rem;-ms-flex-line-pack:distribute;align-content:space-around}}.content{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:stretch;-ms-flex-align:stretch;align-items:stretch;-webkit-box-flex:1;-ms-flex:1;flex:1}@media only screen and (max-width: 56.25em){.content{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}}.sidebar{background-color:var(--color-grey-dark-1);-webkit-box-flex:0;-ms-flex:0 0 16%;flex:0 0 16%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.detail{display:-webkit-box;display:-ms-flexbox;display:flex;font-size:1.4rem;padding:5rem;background-color:var(--color-grey-light-3);border-bottom:var(--line)}@media only screen and (max-width: 56.25em){.detail{padding:2rem}}@media only screen and (max-width: 37.5em){.detail{padding:1rem;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}}.description{font-size:1.4rem;background-color:#fff;-webkit-box-shadow:var(--shadow-light);box-shadow:var(--shadow-light);padding:3rem;-webkit-box-flex:0;-ms-flex:0 0 60%;flex:0 0 60%;margin-right:5rem}@media only screen and (max-width: 56.25em){.description{padding:1rem;margin-right:2rem}}@media only screen and (max-width: 37.5em){.description{padding:1rem;margin-right:0;margin-bottom:3rem}}.user-reviews{-webkit-box-flex:1;-ms-flex:1;flex:1;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.input{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;font-size:2rem;width:100%}.input__collection{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:3rem 5rem}.input__select{padding:0.5rem 2rem;width:100%;border-radius:0.5rem;border-bottom:2px var(--color-primary) solid;border-right:2px var(--color-primary) solid}.input__select:focus{-webkit-box-shadow:0 1rem 2rem rgba(0,0,0,0.4);box-shadow:0 1rem 2rem rgba(0,0,0,0.4)}.input__set{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;padding:1rem 3rem}.input__error{color:#ddd;-webkit-transform:translateX(0);transform:translateX(0);-webkit-transition:0.7s all ease-in;transition:0.7s all ease-in}.input__error.hidden{opacity:0;-webkit-transform:translateX(-100%);transform:translateX(-100%)}.hidden{opacity:0}table{width:90vw}table th{font-size:2.5rem;margin-bottom:1rem}.data__col--1{width:15%;color:var(--color-grey-light-2)}.data__col--2{width:35%}.data__col--3{width:30%}.data__col--4{width:20%}.arrow{cursor:pointer;-webkit-transition:1s all ease-out;transition:1s all ease-out}.large{font-size:4rem}.data__container{font-size:2rem}.data__col{text-align:center;padding:0.5rem 2rem}@-webkit-keyframes pulsate{0%,100%{-webkit-transform:scale(1);transform:scale(1);-webkit-box-shadow:0;box-shadow:0}50%{-webkit-transform:scale(1.05);transform:scale(1.05);-webkit-box-shadow:0 1rem 4rem rgba(0,0,0,0.25);box-shadow:0 1rem 4rem rgba(0,0,0,0.25)}}@keyframes pulsate{0%,100%{-webkit-transform:scale(1);transform:scale(1);-webkit-box-shadow:0;box-shadow:0}50%{-webkit-transform:scale(1.05);transform:scale(1.05);-webkit-box-shadow:0 1rem 4rem rgba(0,0,0,0.25);box-shadow:0 1rem 4rem rgba(0,0,0,0.25)}}.btn{cursor:pointer;font-size:1.5rem;border:none;font-weight:300;text-transform:uppercase;border-radius:1000px;background-image:-webkit-gradient(linear, left top, right top, from(var(--color-primary-light)), to(var(--color-primary)));background-image:linear-gradient(to right, var(--color-primary-light), var(--color-primary));padding:1.5rem 5rem;position:relative;overflow:hidden;color:#fff}.btn--1{margin-right:5rem}.btn>*{display:inline-block;height:100%;width:100%;-webkit-transition:all 0.35s;transition:all 0.35s}.btn__invisible{position:absolute;top:-100%;left:0;padding:2rem 0rem}.btn:hover{background-image:-webkit-gradient(linear, right top, left top, from(var(--color-primary-light)), to(var(--color-primary)));background-image:linear-gradient(to left, var(--color-primary-light), var(--color-primary))}.btn:hover .btn__invisible{top:0}.btn:hover .btn__visible{-webkit-transform:translateY(200%);transform:translateY(200%)}.btn:focus{outline:none;-webkit-animation:pulsate 1s;animation:pulsate 1s}.loader{-webkit-animation:spin 1s infinite linear;animation:spin 1s infinite linear;border:solid 2vmin transparent;border-radius:50%;border-right-color:var(--color-grey-light-1);border-top-color:var(--color-grey-light-1);-webkit-box-sizing:border-box;box-sizing:border-box;height:20vmin;left:calc(50% - 10vmin);position:fixed;top:calc(50% - 10vmin);width:20vmin;z-index:1}.loader:before{-webkit-animation:spin 2s infinite linear;animation:spin 2s infinite linear;border:solid 2vmin transparent;border-radius:50%;border-right-color:var(--color-grey-dark-2);border-top-color:var(--color-grey-dark-2);-webkit-box-sizing:border-box;box-sizing:border-box;content:'';height:16vmin;left:0;position:absolute;top:0;width:16vmin}.loader:after{-webkit-animation:spin 3s infinite linear;animation:spin 3s infinite linear;border:solid 2vmin transparent;border-radius:50%;border-right-color:var(--color-grey-light-1);border-top-color:var(--color-grey-light-1);-webkit-box-sizing:border-box;box-sizing:border-box;content:'';height:12vmin;left:2vmin;position:absolute;top:2vmin;width:12vmin}@-webkit-keyframes spin{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes spin{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
