--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -18,6 +18,12 @@
     padding: 0.5rem 2rem;
     width: 100%;
     border-radius: 0.5rem;
+    border-bottom: 2px var(--color-primary) solid;
+    border-right: 2px var(--color-primary) solid;
+
+    &:focus {
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    }
   }
 
   &__set {
@@ -57,6 +63,7 @@ table {
 .data__col {
   &--1 {
     width: 15%;
+    color: var(--color-grey-light-2);
   }
   &--2 {
     width: 35%;
@@ -71,6 +78,7 @@ table {
 
 .arrow {
   cursor: pointer;
+  transition: 1s all ease-out;
 }
 
 .large {
