--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -6,12 +6,25 @@
   flex-direction: column;
   font-size: 2rem;
   width: 100%;
+  @media only screen and (max-width: $bp-medium) {
+    // flex-direction: row;
+  }
 
   &__collection {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
+    grid-template-columns: repeat(4, 1fr);
     padding: 3rem 5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      padding: 1rem;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media only screen and (max-width: $bp-smallest) {
+      padding: 1.5rem;
+      grid-template-columns: 1fr;
+    }
   }
 
   &__select {
@@ -73,6 +86,15 @@ table {
   }
   &--4 {
     width: 20%;
+  }
+  & a {
+    &:link,
+    &:visited {
+      color: var(--color-primary);
+      display: inline-block;
+      text-decoration: none;
+      border-bottom: 1px solid var(--color-primary-light);
+    }
   }
 }
 
